<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flyme Tools</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="confirm">Confirm</string>
    <string name="del_config_file">Delete all config files</string>
    <string name="successfully_del">Successfully deleted</string>
    <string name="app_des">Flyme 4.0 tools</string>
    <string name="app_name_setting">Applications name setting</string>
    <string name="framework">Framework</string>
    <string name="framework_summary">Framework related settings</string>
    <string name="common">Common</string>
    <string name="sound">Sound</string>
    <string name="sound_summary">Sound related settings</string>
    <string name="statusbar">Status Bar</string>
    <string name="statusbar_summary">Status Bar modifications</string>
    <string name="applications">Applications</string>
    <string name="applications_summary">Applications settings</string>
    <string name="buttons">Buttons</string>
    <string name="buttons_summary">Buttons mappings, actions etc.</string>
    <string name="about_module">About module</string>
    <string name="reboot">Reboot</string>
    <string name="showSystemApp">Show System Apps</string>
    <string name="noShowSystemApp">No System Apps</string>
    <string name="open_settings">Open settings</string>
    <string name="edit_app_title">App name</string>
    <string name="edit_app_summary">Edit app name</string>
    <string name="app_setting">Applications settings</string>
    <string name="debug_setting">Debug Setting</string>
    <string name="replace_app_name">Replace app name</string>
    <string name="replace_app_name_summary">Replace app name freely</string>
    <string name="app_icon_setting">Applications icon setting</string>
    <string name="replace_icon_summary">Replace app icon freely</string>
    <string name="preference_replace_app_icon">preference_replace_app_icon</string>
    <string name="app_smartbar">Smartbar</string>
    <string name="custom_color">Custom Color</string>
    <string name="app_smartbar_setting">Smartbar setting</string>
    <string name="replace_smartbar_summary">Change Smartbar color freely</string>
    <string name="replace_smartbar">Replace Smartbar</string>
    <string name="select_smartbar_type">Select Smartbar Type</string>
    <string name="preference_replace_app_name">preference_replace_app_name</string>
    <string name="preference_app_name">preference_app_name</string>
    <string name="preference_replace_icon">preference_replace_icon</string>
    <string name="preference_replace_smartbar">preference_replace_smartbar</string>
    <string name="preference_smartbar_type">preference_smartbar_type</string>
    <string name="preference_smartbar_color">preference_smartbar_color</string>
    <string name="preference_smartbar_default_type">preference_smartbar_default_type</string>
    <string name="select_smartbar_default_type">Select default type</string>
    <string name="app_smartbar_default">Default Smartbar</string>
    <string name="home_setting">Home key setting</string>
    <string name="home_setting_setting">Home key setting</string>
    <string name="app_launcher_setting">Launcher setting</string>
    <string name="app_launcher_locked">Launcher locked</string>
    <string name="preference_app_launcher_locked">preference_app_launcher_locked</string>
    <string name="app_launcher_locked_summary">Long press the desktop to enter edit mode</string>
    <string name="translucent_decor">Translucent decor</string>
    <string name="translucent_compulsory">Translucent Bar</string>
    <string name="translucent_compulsory_summary">Forced translucent</string>
    <string name="preference_translucent_compulsory">preference_translucent_compulsory</string>
    <string name="preference_has_ActionBar">preference_has_ActionBar</string>
    <string name="has_ActionBar">ActionBar</string>
    <string name="has_ActionBar_summary">Obtain ActionBar</string>
    <string name="preference_has_NavigationBar">preference_has_NavigationBar</string>
    <string name="has_NavigationBar">has NavigationBar</string>
    <string name="has_NavigationBar_summary">Has NavigationBar Summary</string>
    <string name="preference_automatic_color_open">preference_automatic_color_open</string>
    <string name="automatic_color">Automatic recognition of color</string>
    <string name="preference_translucent_color">preference_translucent_color</string>
    <string name="automatic_color_summary">Obtain color automatically</string>
    <string name="preference_reverse_setting_action_bar">preference_reverse_setting_action_bar</string>
    <string name="reverse_setting_action_bar">Reverse setting</string>
    <string name="reverse_setting_action_bar_summary">Reverse setting into ActionBar</string>
    <string name="preference_retain_status_bar"/>
    <string name="retain_status_bar">Retain status bar</string>
    <string name="retain_status_bar_summary">Might cause problems</string>
    <string name="preference_force_black_color">preference_force_black_color</string>
    <string name="force_black_color">Force black color</string>
    <string name="force_black_color_summary">Force black icons</string>
    <string name="preference_brightly_lit_smart_bar">preference_brightly_lit_smart_bar</string>
    <string name="preference_brightly_lit_status_bar">preference_brightly_lit_status_bar</string>
    <string name="brightly_lit_status_bar_summary">Clean view</string>
    <string name="brightly_lit_status_bar">Bright Status Bar</string>
    <string name="brightly_lit_smart_bar">brightly_lit_smart_bar</string>
    <string name="brightly_lit_smartbar_summary">brightly_lit_smartbar_summary</string>
    <string name="preference_force_brightly_lit_mode">preference_force_brightly_lit_mode</string>
    <string name="force_brightly_lit_mode">Reset Status Bar</string>
    <string name="force_brightly_lit_mode_summary">Fix visual wrongs</string>
    <string name="touch_get_color">Touch to get color</string>
    <string name="touch_get_color_summary">Set color on each interface</string>
    <string name="preference_touch_get_color">preference_touch_get_color</string>
    <string name="preference_show_notification">preference_show_notification</string>
    <string name="show_notification">Show notifications</string>
    <string name="show_notification_summary">Pop up notifications</string>
    <string name="notification_add_activity">notification_add_activity</string>
    <string name="notification_add_app">notification_add_app</string>
    <string name="preference_change_status_bar_mode">preference_change_status_bar_mode</string>
    <string name="change_status_bar_mode">preference_change_status_bar_mode</string>
    <string name="change_status_bar_mode_summary">change_status_bar_mode_summary</string>
    <string name="show_app_log_summary">show_app_log_summary</string>
    <string name="preference_show_app_log">preference_show_app_log</string>
    <string name="preference_app_automatic_adaptation">preference_app_automatic_adaptation</string>
    <string name="app_automatic_adaptation">Application of automatic adaptation</string>
    <string name="app_automatic_adaptation_summary">Application of automatic adaptation</string>
    <string name="data_restore">Data Restore</string>
    <string name="restore_config">Find the backup file,Restore The recovery?</string>
    <string name="data_backup">Data Backup</string>
    <string name="backup_config">Backup application configuration?</string>
    <string name="are_backup_file">Are backup file</string>
    <string name="get_backup_list">Getting the backup file list</string>
    <string name="are_restore_file">Are Restore file</string>
    <string name="get_restore_list">Getting the Restore file list</string>
    <string name="backup_successfully">Backup Successfully</string>
    <string name="restore_successfully">Restore Successfully</string>
    <string name="about">想了解最新进展,请加交流群：206648823</string>
</resources>
