<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:zx="http://schemas.android.com/apk/res/com.zhixin.flymeTools"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:gravity="center_horizontal|center_vertical" android:layout_weight="1"
                  android:background="@drawable/logo_background">
        <ImageView android:layout_width="195dp" android:layout_height="30dp"
                   android:src="@drawable/logo"/>
    </LinearLayout>
    <TableLayout android:id="@+id/mainTable" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:layout_marginBottom="48dp">
        <TableRow>
            <com.zhixin.flymeTools.controls.ImageMenuBtn android:layout_width="fill_parent"
                                                         zx:image="@drawable/icon_applications"
                                                         zx:title="@string/applications" android:layout_weight="1"
                                                         zx:url=".app.AppListActivity"
                                                         android:clickable="true"
                                                         android:layout_height="wrap_content"/>
            <com.zhixin.flymeTools.controls.ImageMenuBtn android:layout_width="fill_parent"
                                                         zx:image="@drawable/icon_framework"
                                                         zx:title="@string/framework"
                                                         android:layout_weight="1" zx:url=".framework.SettingActivity"
                                                         android:layout_height="fill_parent"/>
            <com.zhixin.flymeTools.controls.ImageMenuBtn android:layout_width="fill_parent"
                                                         zx:image="@drawable/icon_keys"
                                                         zx:title="@string/buttons" android:layout_weight="1"
                                                         zx:url=".key.SettingActivity"
                                                         android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <com.zhixin.flymeTools.controls.ImageMenuBtn android:layout_width="fill_parent"
                                                         zx:image="@drawable/icon_statusbar"
                                                         zx:title="@string/statusbar"
                                                         android:layout_weight="1" zx:url=".statusbar.SettingActivity"
                                                         android:layout_height="wrap_content"/>
            <com.zhixin.flymeTools.controls.ImageMenuBtn android:layout_width="fill_parent"
                                                         zx:image="@drawable/icon_sound"
                                                         zx:title="@string/sound" android:layout_weight="1"
                                                         zx:url=".app.AppListActivity"
                                                         android:layout_height="wrap_content"/>
            <com.zhixin.flymeTools.controls.ImageMenuBtn android:layout_width="fill_parent"
                                                         zx:image="@drawable/icon_about"
                                                         zx:title="@string/about_module" android:layout_weight="1"
                                                         zx:url=".AboutActivity"
                                                         android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
</LinearLayout>

